--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@ color: white;
 <div class="hidden md:flex space-x-8">
 <a href="#home" class="nav-link active text-gray-800 hover:text-primary transition-colors">Home</a>
 <a href="#about" class="nav-link text-gray-800 hover:text-primary transition-colors">About</a>
+<a href="#tech-stack-section" class="nav-link text-gray-800 hover:text-primary transition-colors">Skills</a>
 <a href="#Projects" class="nav-link text-gray-800 hover:text-primary transition-colors">Projects</a>
 <a href="#resume" class="nav-link text-gray-800 hover:text-primary transition-colors">Resume</a>
 <a href="#certificates" class="nav-link text-gray-800 hover:text-primary transition-colors">Certificates</a>
@@ -224,6 +225,7 @@ color: white;
 <div class="flex flex-col space-y-4 mt-4 pb-4">
 <a href="#home" class="text-gray-800 hover:text-primary transition-colors">Home</a>
 <a href="#about" class="text-gray-800 hover:text-primary transition-colors">About</a>
+<a href="#tech-stack-section" class="nav-link text-gray-800 hover:text-primary transition-colors">Skills</a>
 <a href="#Projects" class="text-gray-800 hover:text-primary transition-colors">Projects</a>
 <a href="#resume" class="text-gray-800 hover:text-primary transition-colors">Resume</a>
 <a href="#certificates" class="text-gray-800 hover:text-primary transition-colors">Certificates</a>
@@ -880,6 +882,7 @@ writeLoop();
 <body>
 
   <!-- Tech Stack Section with Different Background -->
+<section id="tech-stack-section">
   <section class="tech-stack-section">
     <div class="wrap">
       <h2 class="section-title">⚙️ Tech Stack</h2>
@@ -1728,3 +1731,4 @@ animateSkills();
 </script>
 </body>
 </html>
+
