--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@ background-position: 0% 50%;
 }
 }
 .section {
-min-height: 100vh;
-padding: 6rem 0;
+  padding: 6rem 0;
+}
+
+@media (max-width: 768px) {
+  .section {
+    min-height: auto;
+    padding: 3rem 0;
+  }
 }
 .nav-link {
 position: relative;
@@ -652,7 +658,7 @@ color: white;
 </script>
 
 <!-- About Section -->
-<section id="about" class="section bg-white">
+<section id="about" class="bg-white py-16 md:py-24">
 <div class="container mx-auto px-6">
 <h2 class="text-4xl font-bold text-center mb-16">About Me</h2>
 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
@@ -1731,4 +1737,5 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
