--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@ writeLoop();
 </div>
 <h3 class="text-2xl font-semibold text-white">Download Resume</h3>
 </div>
-<a href="./resume/Resume yeswanth.pdf" target="_blank" class="inline-flex items-center bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-indigo-600 transition-colors whitespace-nowrap">
+<a href="./resume/Yeswanth_Resume.pdf" target="_blank" class="inline-flex items-center bg-primary text-white px-6 py-3 rounded-button font-medium hover:bg-indigo-600 transition-colors whitespace-nowrap">
 <i class="ri-file-download-line mr-2"></i> Download Full Resume
 </a>
 </div>
@@ -1737,5 +1737,6 @@ animateSkills();
 </script>
 </body>
 </html>
+
 
 
